--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-/.idea/
+/.idea/*
